changed image and assets paths

--- a/app/eap/templates/music/index.html
+++ b/app/eap/templates/music/index.html
@@ -32,7 +32,7 @@
 </section>
 
 <section class="section-hero-parallax parallax-section " id="hero-parallax"
-         style="background-image: url({% static "images/parallax/7.jpg" %});
+         style="background-image: url({% static "music/images/parallax/7.jpg" %});
 background-size: cover">
     <div class="overly-shade">
         <div class="container">
