--- a/app/eap/templates/music/includes/header.html
+++ b/app/eap/templates/music/includes/header.html
@@ -45,7 +45,7 @@
                 <span class="icon-bar"> </span>
             </button>
             <a class="navbar-brand " href="{% url 'home' %}">
-                <img src="{% static "images/logo.png" %}" alt="MUSIC">
+                <img src="{% static "music/images/logo.png" %}" alt="MUSIC">
             </a>
 
             <!-- this part for mobile -->
