--- a/app/eap/templates/music/layouts/base.html
+++ b/app/eap/templates/music/layouts/base.html
@@ -8,25 +8,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{% static "assets/ico/apple-touch-icon-144-precomposed.png" %}">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{% static "assets/ico/apple-touch-icon-114-precomposed.png" %}">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% static "assets/ico/apple-touch-icon-72-precomposed.png" %}">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{% static "music/ico/apple-touch-icon-144-precomposed.png" %}">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{% static "music/ico/apple-touch-icon-114-precomposed.png" %}">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% static "music/ico/apple-touch-icon-72-precomposed.png" %}">
     <link rel="apple-touch-icon-precomposed" href="{% static "ico/apple-touch-icon-57-precomposed.png" %}">
-    <link rel="shortcut icon" href="{% static "assets/ico/favicon.png" %}">
+    <link rel="shortcut icon" href="{% static "music/ico/favicon.png" %}">
     <title>MUSICIAN STASH - Music gear collection</title>
 
     {% compress css %}
     <!-- Bootstrap core CSS -->
-    <link href="{% static "assets/bootstrap/css/bootstrap.css" %}" rel="stylesheet">
-    <link href="{% static "assets/css/awesome-bootstrap-checkbox.css" %}" rel="stylesheet">
+    <link href="{% static "music/bootstrap/css/bootstrap.css" %}" rel="stylesheet">
+    <link href="{% static "music/css/awesome-bootstrap-checkbox.css" %}" rel="stylesheet">
 
     <!-- styles needed by swiper slider -->
-    <link href="{% static "assets/plugins/swiper-master/css/swiper.css" %}" rel="stylesheet">
+    <link href="{% static "music/plugins/swiper-master/css/swiper.css" %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="{% static "assets/css/style.css" %}" rel="stylesheet">
-    <link href="{% static "assets/css/home-v7.css" %}" rel="stylesheet">
-    <link href="{% static "assets/css/skin-black.css" %}" rel="stylesheet">
+    <link href="{% static "music/css/style.css" %}" rel="stylesheet">
+    <link href="{% static "music/css/home-v7.css" %}" rel="stylesheet">
+    <link href="{% static "music/css/skin-black.css" %}" rel="stylesheet">
     {% endcompress %}
 
     <!-- Just for debugging purposes. -->
@@ -43,7 +43,7 @@
             elements: true
         };
     </script>
-    <script src="{% static "assets/js/pace.min.js" %}"></script>
+    <script src="{% static "music/js/pace.min.js" %}"></script>
 </head>
 
 <body>
@@ -59,8 +59,8 @@
 
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-<script src="{% static "assets/bootstrap/js/bootstrap.min.js" %}"></script>
-<script src="{% static "assets/plugins/swiper-master/js/swiper.jquery.min.js" %}"></script>
+<script src="{% static "music/bootstrap/js/bootstrap.min.js" %}"></script>
+<script src="{% static "music/plugins/swiper-master/js/swiper.jquery.min.js" %}"></script>
 <script>
 
     var swiper = new Swiper('.swiper-container', {
@@ -78,41 +78,41 @@
 </script>
 
 <!-- include jqueryCycle plugin -->
-<script src="{% static "assets/js/jquery.cycle2.min.js" %}"></script>
+<script src="{% static "music/js/jquery.cycle2.min.js" %}"></script>
 
 <!-- include easing plugin -->
-<script src="{% static "assets/js/jquery.easing.1.3.js" %}"></script>
+<script src="{% static "music/js/jquery.easing.1.3.js" %}"></script>
 
 <!-- include  parallax plugin -->
-<script type="text/javascript" src="{% static "assets/js/jquery.parallax-1.1.js" %}"></script>
+<script type="text/javascript" src="{% static "music/js/jquery.parallax-1.1.js" %}"></script>
 
 <!-- optionally include helper plugins -->
-<script type="text/javascript" src="{% static "assets/js/helper-plugins/jquery.mousewheel.min.js" %}"></script>
+<script type="text/javascript" src="{% static "music/js/helper-plugins/jquery.mousewheel.min.js" %}"></script>
 
 <!-- include mCustomScrollbar plugin //Custom Scrollbar  -->
 
-<script type="text/javascript" src="{% static "assets/js/jquery.mCustomScrollbar.js" %}"></script>
+<script type="text/javascript" src="{% static "music/js/jquery.mCustomScrollbar.js" %}"></script>
 
 <!-- include grid.js // for equal Div height  -->
-<script src="{% static "assets/js/grids.js" %}"></script>
+<script src="{% static "music/js/grids.js" %}"></script>
 
 <!-- include carousel slider plugin  -->
-<script src="{% static "assets/js/owl.carousel.min.js" %}"></script>
+<script src="{% static "music/js/owl.carousel.min.js" %}"></script>
 
 <!-- include smoothproducts // product zoom plugin  -->
-{#<script type="text/javascript" src="{% static "assets/js/smoothproducts.min.js" %}"></script>#}
+{#<script type="text/javascript" src="{% static "music/js/smoothproducts.min.js" %}"></script>#}
 
 <!-- jQuery select2 // custom select   -->
 {#<script src="http://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>#}
 
 <!-- include touchspin.js // touch friendly input spinner component   -->
-<script src="{% static "assets/js/bootstrap.touchspin.js" %}"></script>
+<script src="{% static "music/js/bootstrap.touchspin.js" %}"></script>
 
 <!-- include custom script for only homepage  -->
-<script src="{% static "assets/js/home.js" %}"></script>
+<script src="{% static "music/js/home.js" %}"></script>
 <!-- include custom script for site  -->
-<script src="{% static "assets/js/script.js" %}"></script>
-<script src="{% static "assets/js/sidebar-nav.js" %}"></script>
+<script src="{% static "music/js/script.js" %}"></script>
+<script src="{% static "music/js/sidebar-nav.js" %}"></script>
 {#<script src="{% static "turbolinks/turbolinks.js" %}"></script>#}
 
 <script type="text/javascript">
