--- a/app/eap/templates/music/news/articles.html
+++ b/app/eap/templates/music/news/articles.html
@@ -1,6 +1,10 @@
 {% extends "layouts/base.html" %}
 {% load staticfiles %}
 
+{% block styles %}
+    <link href="{% static "music/css/news.css" %}" rel="stylesheet">
+{% endblock %}
+
 {% block content %}
     <section class="blog-intro parallaxOffset parallaxbg"
              style="background: url({% static "music/images/news/blogbg.jpg" %}) no-repeat 50% -86px fixed; background-size: cover">
@@ -8,10 +12,9 @@
             <div class="display-table-cell hw100 relative">
                 <div class="container blogIntroContent zindex10 relative scrollme">
                     <div class="row">
-                        <div class="  wow  fadeInDown introContent text-center">
-                            <h1 class="x2large"> NEWS </h1>
-                            <h5 class="parallaxSubtitle"> The latest news, advice and comment. </h5>
-
+                        <div class="wow fadeInDown introContent text-center">
+                            <h1 class="x2large">NEWS</h1>
+                            <h5 class="parallaxSubtitle">The latest news, advice and comment.</h5>
                             <div class="subscribe-dropdown">
                                 <div class="dropdown"><a class="btn btn-subscribe dropdown-toggle" id="dropdownMenu1"
                                                          data-toggle="dropdown" aria-expanded="true">Subscribe</a>
@@ -33,7 +36,7 @@
                                         <li>
                                             <div>
                                                 <label>
-                                                    <input name="option3" value="option2" type="checkbox">
+                                                    <input name="option3" value="option3" type="checkbox">
                                                     &nbsp; Offer </label>
                                             </div>
                                         </li>
@@ -41,7 +44,7 @@
                                             <input placeholder="Enter Your Email" id="subemail" name="subemail"
                                                    type="text"/>
                                         </li>
-                                        <li><a href="#" class="btn btn-block"> Subscribe </a></li>
+                                        <li><a href="#" class="btn btn-block">Subscribe</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -63,29 +66,28 @@
                         {% for article in articles %}
                         <div class="item-blog-post">
                             <div class="post-header clearfix">
-                                <h2 class="wow  fadeIn  " data-wow-duration="0.2s"><a href="article.html">{{ article.title }}</a></h2>
-
+                                <h2 class="wow fadeIn" data-wow-duration="0.2s"><a href="{% url 'article' article.slug %}">{{ article.title }}</a></h2>
                                 <div class="post-info"> by <span><a class="userBy">{{ article.publisher.get_full_name|default:article.publisher.username }}</a></span> on
                                     <span>{{ article.published_at|date }}</span>
-
-                                    <div class="share-gallery pull-right no-float-xs"><a class="share-facebook"> <i
-                                            class="fa fa-facebook-f"> </i> </a> <a class="share-twitter"
-                                                                                   href="http://facebook.com"> <i
-                                            class="fa fa-twitter"> </i> </a> <a class="share-pinterest"
-                                                                                href="http://facebook.com"> <i
-                                            class="fa fa-pinterest-p"> </i> </a>
-                                        <a class="share-email" href="#"> <i class="fa fa-envelope-o"> </i> </a>
+                                    <div class="share-gallery pull-right no-float-xs"><a class="share-facebook">
+                                        <i class="fa fa-facebook-f"></i></a><a class="share-twitter" href="http://facebook.com">
+                                        <i class="fa fa-twitter"> </i> </a> <a class="share-pinterest" href="http://facebook.com">
+                                        <i class="fa fa-pinterest-p"></i></a><a class="share-email" href="#">
+                                        <i class="fa fa-envelope-o"></i></a>
                                     </div>
                                 </div>
                             </div>
                             <div class="post-main-view">
-                                <div class="post-lead-image  wow fadeInDown  " data-wow-duration="0.2s"><a
-                                        href="article.html"> <img src="images/blog/unnamed2.jpg" class="img-responsive"
-                                                                  alt="G"> </a></div>
-                                <div class="post-description  wow fadeInDown  " data-wow-duration="0.2s">
-                                    {{ article.content }}
-                                    <a href="article.html" class="btn btn-more"> See More <i
-                                            class="fa fa-long-arrow-right"></i> </a>
+                                {% if article.has_images %}
+                                <div class="post-lead-image wow fadeInDown" data-wow-duration="0.2s">
+                                    <a href="{% url 'article' article.slug %}">
+                                        <img src="{{ article.first_image.image.url }}" class="img-responsive" alt="{{ article.first_image.image.alt }}">
+                                    </a>
+                                </div>
+                                {% endif %}
+                                <div class="post-description wow fadeInDown" data-wow-duration="0.2s">
+                                    {{ article.content|safe }}
+                                    <a href="{% url 'article' article.slug %}" class="btn btn-more">See More<i class="fa fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -93,8 +95,7 @@
                         {% empty %}
                             <h2>Sorry, no results found.</h2>
                         {% endfor %}
-
-                        <div class="loadMoreBlog clearfix text-center"><a class="btn  btn-block"> LOAD MORE </a></div>
+                        <div class="loadMoreBlog clearfix text-center"><a class="btn btn-block">LOAD MORE</a></div>
                     </div>
                 </div>
             </div>
