Working on details page for news. Added field for description excerpt.

--- a/app/eap/templates/music/includes/header.html
+++ b/app/eap/templates/music/includes/header.html
@@ -84,6 +84,7 @@
                 </li>
                 {% endfor %}
                 <li><a href="#">Sale</a></li>
+                <li><a href="/news">News</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
