--- a/app/eap/templates/music/news/articles.html
+++ b/app/eap/templates/music/news/articles.html
@@ -6,92 +6,16 @@
 {% endblock %}
 
 {% block content %}
-    <section class="blog-intro parallaxOffset parallaxbg"
-             style="background: url({% static "music/images/news/blogbg.jpg" %}) no-repeat 50% -86px fixed; background-size: cover">
-        <div class="display-table relative5 hw100">
-            <div class="display-table-cell hw100 relative">
-                <div class="container blogIntroContent zindex10 relative scrollme">
-                    <div class="row">
-                        <div class="wow fadeInDown introContent text-center">
-                            <h1 class="x2large">NEWS</h1>
-                            <h5 class="parallaxSubtitle">The latest news, advice and comment.</h5>
-                            <div class="subscribe-dropdown">
-                                <div class="dropdown"><a class="btn btn-subscribe dropdown-toggle" id="dropdownMenu1"
-                                                         data-toggle="dropdown" aria-expanded="true">Subscribe</a>
-                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                        <li>
-                                            <div>
-                                                <label>
-                                                    <input name="option1" value="option1" type="checkbox">
-                                                    &nbsp; Latest News </label>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div>
-                                                <label>
-                                                    <input name="option2" value="option2" type="checkbox">
-                                                    &nbsp; New Product </label>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div>
-                                                <label>
-                                                    <input name="option3" value="option3" type="checkbox">
-                                                    &nbsp; Offer </label>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <input placeholder="Enter Your Email" id="subemail" name="subemail"
-                                                   type="text"/>
-                                        </li>
-                                        <li><a href="#" class="btn btn-block">Subscribe</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="overlay-shade"></div>
-        <div class="background-overly g6"></div>
-    </section>
+    {% include 'includes/articles_header.html' %}
     <!--/.blog-intro -->
-
     <div class="blog-wrapper">
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-centered blog-left">
                     <div class="bl-inner">
                         {% for article in articles %}
-                        <div class="item-blog-post">
-                            <div class="post-header clearfix">
-                                <h2 class="wow fadeIn" data-wow-duration="0.2s"><a href="{% url 'article' article.slug %}">{{ article.title }}</a></h2>
-                                <div class="post-info"> by <span><a class="userBy">{{ article.publisher.get_full_name|default:article.publisher.username }}</a></span> on
-                                    <span>{{ article.published_at|date }}</span>
-                                    <div class="share-gallery pull-right no-float-xs"><a class="share-facebook">
-                                        <i class="fa fa-facebook-f"></i></a><a class="share-twitter" href="http://facebook.com">
-                                        <i class="fa fa-twitter"> </i> </a> <a class="share-pinterest" href="http://facebook.com">
-                                        <i class="fa fa-pinterest-p"></i></a><a class="share-email" href="#">
-                                        <i class="fa fa-envelope-o"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="post-main-view">
-                                {% if article.has_images %}
-                                <div class="post-lead-image wow fadeInDown" data-wow-duration="0.2s">
-                                    <a href="{% url 'article' article.slug %}">
-                                        <img src="{{ article.first_image.image.url }}" class="img-responsive" alt="{{ article.first_image.image.alt }}">
-                                    </a>
-                                </div>
-                                {% endif %}
-                                <div class="post-description wow fadeInDown" data-wow-duration="0.2s">
-                                    {{ article.content|safe }}
-                                    <a href="{% url 'article' article.slug %}" class="btn btn-more">See More<i class="fa fa-long-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <!--/.item-blog-post-->
+                            {% include 'includes/article_post.html' with description=article.excerpt details=False %}
+                            <!--/.item-blog-post-->
                         {% empty %}
                             <h2>Sorry, no results found.</h2>
                         {% endfor %}
