--- a/app/eap/templates/music/includes/article_post.html
+++ b/app/eap/templates/music/includes/article_post.html
@@ -26,19 +26,47 @@
         </div>
         {% if not details %}
         <a href="{% url 'article' article.slug %}" class="btn btn-more">See More<i class="fa fa-long-arrow-right"></i></a>
-        {% endif %}
-    </div>
-    {% if details %}
-    <div class="col-lg-6 col-md-6 col-sm-6">
-        <div class="main-image sp-wrap col-lg-12 no-padding">
-            {% for image in article.images.all %}
-                <a href="{% thumbnail image.image "593x722" as img %}{{ img.url }}{% endthumbnail %}">
-                    {% thumbnail image.image "593x722" as img %}
-                        <img class="img-responsive" alt="img" src="{{ img.url }}">
-                    {% endthumbnail %}
-                </a>
+        {% else %}
+        <div id="blueimp-gallery" class="blueimp-gallery">
+            <!-- The container for the modal slides -->
+            <div class="slides"></div>
+            <!-- Controls for the borderless lightbox -->
+            <h3 class="title"></h3>
+            <a class="prev">‹</a>
+            <a class="next">›</a>
+            <a class="close">×</a>
+            <a class="play-pause"></a>
+            <ol class="indicator"></ol>
+            <!-- The modal dialog, which will be used to wrap the lightbox content -->
+            <div class="modal fade">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title"></h4>
+                        </div>
+                        <div class="modal-body next"></div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default pull-left prev">
+                                <i class="glyphicon glyphicon-chevron-left"></i>
+                                Previous
+                            </button>
+                            <button type="button" class="btn btn-primary next">
+                                Next
+                                <i class="glyphicon glyphicon-chevron-right"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="links">
+            {% for image in article.images.all|slice:"1:" %}
+            <a href="{{ image.image.url }}" title="{{ image.title }}" data-gallery>
+                <img src="{% thumbnail image.image "75x75" as img %}{{ img.url }}{% endthumbnail %}" alt="{{ image.alt }}">
+            </a>
             {% endfor %}
         </div>
+        {% endif %}
     </div>
-    {% endif %}
 </div>
