--- a/app/eap/templates/music/layouts/base.html
+++ b/app/eap/templates/music/layouts/base.html
@@ -160,5 +160,7 @@
 
     }); // end
 </script>
+<!-- Additional scripts in templates that extend this template -->
+{% block scripts %}{% endblock scripts %}
 </body>
 </html>
