--- a/app/eap/templates/music/includes/items_filter.html
+++ b/app/eap/templates/music/includes/items_filter.html
@@ -1,28 +1,20 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         <h4 class="panel-title">
-            <a data-toggle="collapse" href="#collapse{{ filter_name }}" class="collapseWill active">
-                  {{ filter_name }} <span class="pull-left"> <i class="fa fa-caret-right"></i></span>
+            <a data-toggle="collapse" href="#collapse{{ filter.name }}" class="collapseWill active">
+                  {{ filter.title }} <span class="pull-left"> <i class="fa fa-caret-right"></i></span>
             </a>
         </h4>
     </div>
-    <div id="collapse{{ filter_name }}" class="panel-collapse collapse  {% if filter_active %}in{% endif %}">
+    <div id="collapse{{ filter.name }}" class="panel-collapse collapse {% if filter.selected or filter.show %}in{% endif %}">
         <div class="panel-body smoothscroll maxheight300">
-            {% for filter_value in filter_values %}
+            {% for filter_data in filter.results %}
                 <div class="block-element">
                     <div class="checkbox checkbox-success">
-                        <input class="styled" type="checkbox" {% if filter_value.active %}checked{% endif %}>
+                        <input class="styled" type="checkbox" {% if filter_data.selected %}checked{% endif %}>
                         <label>
-                            <a href="?{{ filter_value.querystring }}">
-                            {% if filter_type == 'discount' %}
-                                {% if filter_value.value != '0' %}
-                                    {{ filter_value.value }}% or more ({{ filter_value.count }})
-                                {% else %}
-                                    Less than 10% ({{ filter_value.count }})
-                                {% endif %}
-                            {% else %}
-                                {{ filter_value.value }} ({{ filter_value.count }})
-                            {% endif %}
+                            <a href="?{{ filter_data.querystring }}">
+                            {{ filter_data.name }} ({{ filter_data.count }})
                             </a>
                         </label>
                     </div>
