--- a/app/eap/templates/music/catalog/item.html
+++ b/app/eap/templates/music/catalog/item.html
@@ -9,7 +9,7 @@
             <!-- left column -->
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <!-- product Image and Zoom -->
-                <div class="main-image sp-wrap col-lg-12 no-padding">
+                <div class="main-image sp-wrap col-lg-12 no-padding style3">
                     {% for image in item.images.all %}
                         <a href="{% thumbnail image.image "593x722" as img %}{{ img.url }}{% endthumbnail %}">
                             {% thumbnail image.image "593x722" as img %}
@@ -18,6 +18,7 @@
                         </a>
                     {% endfor %}
                 </div>
+                <div class="productThumb"></div>
             </div>
             <!--/ left column end -->
 
@@ -139,103 +140,103 @@
         <div class="row recommended">
             <h1> YOU MAY ALSO LIKE </h1>
 
-            <div id="SimilarProductSlider">
-                <div class="item">
-                    <div class="product"><a class="product-image"> <img src="images/product/a1.jpg" alt="img"> </a>
+            <!--<div id="SimilarProductSlider">-->
+                <!--<div class="item">-->
+                    <!--<div class="product"><a class="product-image"> <img src="images/product/a1.jpg" alt="img"> </a>-->
 
-                        <div class="description">
-                            <h4><a href="san-remo-spaghetti">YOUR LIFE</a></h4>
+                        <!--<div class="description">-->
+                            <!--<h4><a href="san-remo-spaghetti">YOUR LIFE</a></h4>-->
 
-                            <div class="price"><span>$57</span></div>
-                        </div>
-                    </div>
-                </div>
-                <!--/.item-->
+                            <!--<div class="price"><span>$57</span></div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--&lt;!&ndash;/.item&ndash;&gt;-->
 
-                <div class="item">
-                    <div class="product"><a class="product-image"> <img src="images/product/a2.jpg" alt="img"> </a>
+                <!--<div class="item">-->
+                    <!--<div class="product"><a class="product-image"> <img src="images/product/a2.jpg" alt="img"> </a>-->
 
-                        <div class="description">
-                            <h4><a href="san-remo-spaghetti">RED CROWN</a></h4>
+                        <!--<div class="description">-->
+                            <!--<h4><a href="san-remo-spaghetti">RED CROWN</a></h4>-->
 
-                            <div class="price"><span>$44</span></div>
-                        </div>
-                    </div>
-                </div>
-                <!--/.item-->
+                            <!--<div class="price"><span>$44</span></div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--&lt;!&ndash;/.item&ndash;&gt;-->
 
-                <div class="item">
-                    <div class="product"><a class="product-image"> <img src="images/product/a3.jpg" alt="img"> </a>
+                <!--<div class="item">-->
+                    <!--<div class="product"><a class="product-image"> <img src="images/product/a3.jpg" alt="img"> </a>-->
 
-                        <div class="description">
-                            <h4><a href="san-remo-spaghetti">WHITE GOLD</a></h4>
+                        <!--<div class="description">-->
+                            <!--<h4><a href="san-remo-spaghetti">WHITE GOLD</a></h4>-->
 
-                            <div class="price"><span>$35</span></div>
-                        </div>
-                    </div>
-                </div>
-                <!--/.item-->
+                            <!--<div class="price"><span>$35</span></div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--&lt;!&ndash;/.item&ndash;&gt;-->
 
-                <div class="item">
-                    <div class="product"><a class="product-image"> <img src="images/product/a4.jpg" alt="img"> </a>
+                <!--<div class="item">-->
+                    <!--<div class="product"><a class="product-image"> <img src="images/product/a4.jpg" alt="img"> </a>-->
 
-                        <div class="description">
-                            <h4><a href="san-remo-spaghetti">DENIM 4240</a></h4>
+                        <!--<div class="description">-->
+                            <!--<h4><a href="san-remo-spaghetti">DENIM 4240</a></h4>-->
 
-                            <div class="price"> $<span>55</span></div>
-                        </div>
-                    </div>
-                </div>
-                <!--/.item-->
+                            <!--<div class="price"> $<span>55</span></div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--&lt;!&ndash;/.item&ndash;&gt;-->
 
-                <div class="item">
-                    <div class="product"><a class="product-image"> <img src="images/product/30.jpg" alt="img"> </a>
+                <!--<div class="item">-->
+                    <!--<div class="product"><a class="product-image"> <img src="images/product/30.jpg" alt="img"> </a>-->
 
-                        <div class="description">
-                            <h4><a href="san-remo-spaghetti">CROWN ROCK</a></h4>
+                        <!--<div class="description">-->
+                            <!--<h4><a href="san-remo-spaghetti">CROWN ROCK</a></h4>-->
 
-                            <div class="price"><span>$500</span></div>
-                        </div>
-                    </div>
-                </div>
-                <!--/.item-->
+                            <!--<div class="price"><span>$500</span></div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--&lt;!&ndash;/.item&ndash;&gt;-->
 
-                <div class="item">
-                    <div class="product"><a class="product-image"> <img src="images/product/a5.jpg" alt="img"> </a>
+                <!--<div class="item">-->
+                    <!--<div class="product"><a class="product-image"> <img src="images/product/a5.jpg" alt="img"> </a>-->
 
-                        <div class="description">
-                            <h4><a href="san-remo-spaghetti">SLIM ROCK</a></h4>
+                        <!--<div class="description">-->
+                            <!--<h4><a href="san-remo-spaghetti">SLIM ROCK</a></h4>-->
 
-                            <div class="price"><span>$50 </span></div>
-                        </div>
-                    </div>
-                </div>
-                <!--/.item-->
+                            <!--<div class="price"><span>$50 </span></div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--&lt;!&ndash;/.item&ndash;&gt;-->
 
-                <div class="item">
-                    <div class="product"><a class="product-image"> <img src="images/product/36.jpg" alt="img"> </a>
+                <!--<div class="item">-->
+                    <!--<div class="product"><a class="product-image"> <img src="images/product/36.jpg" alt="img"> </a>-->
 
-                        <div class="description">
-                            <h4><a href="san-remo-spaghetti">ROCK T-Shirts </a></h4>
+                        <!--<div class="description">-->
+                            <!--<h4><a href="san-remo-spaghetti">ROCK T-Shirts </a></h4>-->
 
-                            <div class="price"><span>$130</span></div>
-                        </div>
-                    </div>
-                </div>
-                <!--/.item-->
+                            <!--<div class="price"><span>$130</span></div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--&lt;!&ndash;/.item&ndash;&gt;-->
 
-                <div class="item">
-                    <div class="product"><a class="product-image"> <img src="images/product/13.jpg" alt="img"> </a>
+                <!--<div class="item">-->
+                    <!--<div class="product"><a class="product-image"> <img src="images/product/13.jpg" alt="img"> </a>-->
 
-                        <div class="description">
-                            <h4><a href="san-remo-spaghetti">Denim T-Shirts </a></h4>
+                        <!--<div class="description">-->
+                            <!--<h4><a href="san-remo-spaghetti">Denim T-Shirts </a></h4>-->
 
-                            <div class="price"><span>$43</span></div>
-                        </div>
-                    </div>
-                </div>
-                <!--/.item-->
-            </div>
+                            <!--<div class="price"><span>$43</span></div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--&lt;!&ndash;/.item&ndash;&gt;-->
+            <!--</div>-->
             <!--/.recommended-->
 
         </div>
