--- a/app/eap/templates/music/includes/items_filter_category.html
+++ b/app/eap/templates/music/includes/items_filter_category.html
@@ -1,36 +1,37 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         <h4 class="panel-title">
-            <a data-toggle="collapse" href="#collapse{{ filter_name }}" class="collapseWill active ">
-                <span class="pull-left"> <i class="fa fa-caret-right"></i></span> {{ filter_name }}
+            <a data-toggle="collapse" href="#collapse{{ filter.name }}" class="collapseWill active ">
+                <span class="pull-left"> <i class="fa fa-caret-right"></i></span> {{ filter.name }}
             </a>
         </h4>
     </div>
 
-    <div id="collapse{{ filter_name }}" class="panel-collapse collapse {% if filter_active %}in{% endif %}">
+    <div id="collapse{{ filter.name }}" class="panel-collapse collapse in">
         <div class="panel-body">
             <ul class="category-parents">
-                {% for category_filter in category_filters.parent_categories %}
+                {% for category_data in filter.parent_results %}
                     <li>
-                        <i class="fa fa-angle-left"></i>
-                        <a href="{% url 'items' category_filter.value %}?{{ category_filter.querystring }}">
-                            {% if category_filter.value == current_category_obj.slug %}
-                            <b>{{ category_filter.name }} ({{ category_filter.count }})</b>
+                        <i class="fa fa-angle-double-left"></i>
+                        <a href="{{ category_data.url }}">
+                            {% if category_data.selected %}
+                            <b>{{ category_data.name }}</b>
                             {% else %}
-                            {{ category_filter.name }} ({{ category_filter.count }})
+                            {{ category_data.name }}
                             {% endif %}
                         </a>
                     </li>
                 {% endfor %}
             </ul>
             <ul class="category-tree-siblings">
-                {% for category_filter in category_filters.categories %}
+                {% for category_data in filter.results %}
                     <li>
-                        <a href="{% url 'items' category_filter.value %}?{{ category_filter.querystring }}">
-                            {% if category_filter.value == current_category_obj.slug %}
-                            <b>{{ category_filter.name }} ({{ category_filter.count }})</b>
+                        <i class="fa fa-angle-left"></i>
+                        <a href="{{ category_data.url }}">
+                            {% if category_data.selected %}
+                            <b>{{ category_data.name }}</b>
                             {% else %}
-                            {{ category_filter.name }} ({{ category_filter.count }})
+                            {{ category_data.name }}
                             {% endif %}
                         </a>
                     </li>
