add image gallery javascript library

--- a/app/eap/templates/music/layouts/base.html
+++ b/app/eap/templates/music/layouts/base.html
@@ -104,6 +104,9 @@
 <!-- include carousel slider plugin  -->
 <script src="{% static "music/js/owl.carousel.min.js" %}"></script>
 
+<!-- include smoothproducts // product zoom plugin  -->
+<script src="{% static "music/js/smoothproducts-thumb.js" %}"></script>
+
 <!-- jQuery select2 // custom select   -->
 {#<script src="http://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>#}
 
